[project]
name = "soundcharts"
version = "0.0.3"
authors = [
  { name="Soundcharts Tech", email="tech@soundcharts.com" },
]
description = "A Python package for interacting with the Soundcharts API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"